# Anichain-Tauri

./: anime_backend.py  anime_gui.py  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
lib/hama/: scan_anime.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anime.rs  anime_folder.rs  anime_parser.rs  anime_service.rs  api_fetcher.rs  commands.rs  config.rs  database.rs  db.rs  downloader.rs  error.rs  file_scanner.rs  hama.rs  lib.rs  main.rs  models.rs  qbittorrent.rs  server.rs  utils.rs
src-tauri/src/api_providers/: anidb.rs  anilist.rs  myanimelist.rs  omdb.rs  themoviedb.rs  tvdb.rs
src-tauri/src/hama/: AbsoluteSeriesScanner.rs  AniDB.rs  AniList.rs  AnimeLists.rs  FanartTV.rs  Local.rs  MyAnimeList.rs  OMDb.rs  Plex.rs  TVTunes.rs  TheMovieDb.rs  TheTVDBv2.rs  __init__.rs  anidb34.rs  common.rs  tvdb4.rs
src/app/: form.css  form.tsx  globals.css  layout.tsx  page.tsx
src/app/anime/[id]/: page.tsx
src/app/downloads/: page.tsx
src/app/schedule/: page.tsx
src/app/settings/: page.tsx
src/app/tracked/: page.tsx
src/components/: AnimeCard.tsx  AnimeDetails.tsx  Card.tsx  DownloadCard.tsx  Downloads.tsx  Layout.tsx  Navbar.tsx  Schedule.tsx  Settings.tsx  Toast.tsx  TrackedAnimeCard.tsx
src/contexts/: ToastContext.tsx
src/lib/: mockData.ts  mockTauri.ts  qbittorrent.ts  tauri.ts
src/types/: module.d.ts  tauri.d.ts
