[package]
name = "anichain"
version = "0.1.0"
description = "Anime tracking and downloading application"
authors = ["nafislord"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
rss = "2.0"
scraper = "0.18"
once_cell = "1.19"
anyhow = "1.0"
chrono = "0.4"
serde_urlencoded = "0.7"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
