[package]
name = "app"
version = "0.1.0"
description = "Anchain App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
anyhow = "1.0"
url = "2.5"
directories = "5.0"
rss = "2.0"
regex = "1.10"
lazy_static = "1.4"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
